--- a/git-demo/index.html
+++ b/git-demo/index.html
@@ -5,7 +5,7 @@
 	</head>
 
 	<body>
-			<h1><center>WELCOME</center></h1>
+			<h1 style="color:blue"><center>WELCOME</center></h1>
 			<p><center>This is my first git upload and create git-demo project and upload it on github site.</center></p>		
 	</body>
 </html>
