--- a/git-demo/index.html
+++ b/git-demo/index.html
@@ -6,6 +6,19 @@
 
 	<body>
 			<h1 style="color:blue"><center>WELCOME</center></h1>
-			<p><center>This is my first git upload and create git-demo project and upload it on github site.</center></p>		
+			<p class="p-text"><center>This is my first git upload and create git-demo project and upload it on github site.</center></p>
+			<hr>
+			<h1 style="color:blue"><center>WELCOME</center></h1>
+			<p class="p-text"><center>This is my first git upload and create git-demo project and upload it on github site.</center></p>
+			<hr>
+			<h1 style="color:blue"><center>WELCOME</center></h1>
+			<p class="p-text"><center>This is my first git upload and create git-demo project and upload it on github site.</center></p>
+			<hr>
+			<h1 style="color:blue"><center>WELCOME</center></h1>
+			<p><center>This is my first git upload and create git-demo project and upload it on github site.</center></p>
+			<hr>
+			<h1 style="background:#00FFFF; color:#FF0000;"><center>WELCOME</center></h1>
+			<p ><center>This is my first git upload and create git-demo project and upload it on github site.</center></p>
+			<hr>		
 	</body>
 </html>
